apps/base/home-zwavejsui/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zwavejsui
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zwavejsui
      app.kubernetes.io/component: zwavejsui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zwavejsui
        app.kubernetes.io/component: zwavejsui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # node
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: zwavejsui
        image: "registry.lan/zwave-js-ui:11.24.2"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8091
        - name: ws
          containerPort: 3000
        readinessProbe:
          failureThreshold: 12
          httpGet:
            httpHeaders:
              - name: Accept
                value: text/plain
            path: /health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: zwavejsui-data
          mountPath: /usr/src/app/store
          subPath: store
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: zwavejsui-data
        persistentVolumeClaim:
          claimName: zwavejsui-data
      - name: zwavejsui-config
        secret:
          secretName: zwavejsui-config
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
