apps/base/home-zwavejsui/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-zwavejsui
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: zwavejsui
      app.kubernetes.io/component: zwavejsui

  ingress:
    # Allow http from the ingress controller
    - ports:
        - port: http
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

    # Allow ws from HomeAssistant
    - ports:
        - port: ws
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: home-homeassistant
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homeassistant
              app.kubernetes.io/component: homeassistant
